# POO2022-1JJTT

Ejercicio empleados/: BasePlusCommisionEmployee.cpp  BasePlusCommisionEmployee.h  CMakeLists.txt  CommissionEmployee.cpp  CommissionEmployee.h  DailyEmployee.cpp  DailyEmployee.h  Employee.cpp  Employee.h  HourlyEmployee.cpp  HourlyEmployee.h  SalariedEmployee.cpp  SalariedEmployee.h  main.cpp
Figuras/: CMakeLists.txt  Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  Figura.cpp  Figura.h  Rectangulo.cpp  Rectangulo.h  main.cpp
Parcial 1/: 8959373.md  CMakeLists.txt
Parcial 1/Model/: Casino.cpp  Casino.h  DosColores.cpp  DosColores.h  Juego.h  Mayor13.cpp  Mayor13.h  Slots.cpp  Slots.h  twentyOne.cpp  twentyOne.h
Parcial 1/View/: View.cpp
Tarea clion/: tarea debugger.docx
VETERINARIAjjtt/: Main.cpp  Mascota.cpp  Mascota.h  Propietario.cpp  Propietario.h  PropietarioxMascota.cpp  PropietarioxMascota.h  README.md  Sistema.cpp  Sistema.h  makefile  vetUML.drawio
